--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -30,12 +30,21 @@ jobs:
   ReuseableMatrixJobForDeployment:
     strategy:
       matrix:
-        SERVICE_LOCATION: ['admin/admin-service', 'admin/kernel-masterdata-service', 'admin/kernel-syncdata-service']
-        SERVICE_NAME:  ['admin-service', 'kernel-masterdata-service', 'kernel-syncdata-service']
+        include:
+        - SERVICE_LOCATION: 'admin/admin-service'
+          SERVICE_NAME: 'admin-service' 'kernel-masterdata-service', 'kernel-syncdata-service']
+          JAR_ZIP_NAME: 'admin'
+        - SERVICE_LOCATION: 'admin/kernel-masterdata-service' 'admin/kernel-syncdata-service']
+          SERVICE_NAME: 'kernel-masterdata-service', 'kernel-syncdata-service']
+          JAR_ZIP_NAME: 'admin'
+        - SERVICE_LOCATION: 'admin/kernel-syncdata-service'
+          SERVICE_NAME: 'kernel-syncdata-service'
+          JAR_ZIP_NAME: 'admin'
     uses: syedsalman3753/kattu/.github/workflows/docker-build.yml@master
     with:
       SERVICE_LOCATION: ${{ matrix.SERVICE_LOCATION }}
       SERVICE_NAME: ${{ matrix.SERVICE_NAME }}
+      JAR_ZIP: ${{ matrix.JAR_ZIP }}
     secrets:
       DEV_NAMESPACE_DOCKER_HUB: ${{ secrets.DEV_NAMESPACE_DOCKER_HUB }}
       ACTOR_DOCKER_HUB: ${{ secrets.ACTOR_DOCKER_HUB }}
