--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -32,10 +32,10 @@ jobs:
       matrix:
         include:
           - SERVICE_LOCATION: 'admin/admin-service'
-            SERVICE_NAME: 'admin-service' 'kernel-masterdata-service', 'kernel-syncdata-service']
+            SERVICE_NAME: 'admin-service'
             JAR_ZIP_NAME: 'admin'
-          - SERVICE_LOCATION: 'admin/kernel-masterdata-service' 'admin/kernel-syncdata-service']
-            SERVICE_NAME: 'kernel-masterdata-service', 'kernel-syncdata-service']
+          - SERVICE_LOCATION: 'admin/kernel-masterdata-service'
+            SERVICE_NAME: 'kernel-masterdata-service'
             JAR_ZIP_NAME: 'admin'
           - SERVICE_LOCATION: 'admin/kernel-syncdata-service'
             SERVICE_NAME: 'kernel-syncdata-service'
@@ -44,7 +44,7 @@ jobs:
     with:
       SERVICE_LOCATION: ${{ matrix.SERVICE_LOCATION }}
       SERVICE_NAME: ${{ matrix.SERVICE_NAME }}
-      JAR_ZIP: ${{ matrix.JAR_ZIP }}
+      JAR_ZIP: ${{ matrix.JAR_ZIP_NAME }}
     secrets:
       DEV_NAMESPACE_DOCKER_HUB: ${{ secrets.DEV_NAMESPACE_DOCKER_HUB }}
       ACTOR_DOCKER_HUB: ${{ secrets.ACTOR_DOCKER_HUB }}
