--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -28,6 +28,7 @@ jobs:
       ossrh_token: 'xxxxx'
 
   ReuseableMatrixJobForDeployment:
+    needs: build-maven-admin
     strategy:
       matrix:
         include:
