--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -49,3 +49,13 @@ jobs:
       DEV_NAMESPACE_DOCKER_HUB: ${{ secrets.DEV_NAMESPACE_DOCKER_HUB }}
       ACTOR_DOCKER_HUB: ${{ secrets.ACTOR_DOCKER_HUB }}
       RELEASE_DOCKER_HUB: ${{ secrets.RELEASE_DOCKER_HUB }}
+
+  sonar_analysis:
+    #needs: build-maven-admin
+    uses: syedsalman3753/kattu/.github/workflows/maven-sonar-analysis.yml@master
+    with:
+      SERVICE_LOCATION: ./admin
+    secrets:
+      GITHUB_TOKEN: 'xxxx'
+      SONAR_TOKEN: 'xxxx'
+      ORG_KEY: 'xxxx'
