--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -58,3 +58,8 @@ jobs:
     secrets:
       SONAR_TOKEN: 'xxxx'
       ORG_KEY: 'xxxx'
+      OSSRH_USER: 'xxxx'
+      OSSRH_SECRET: 'xxxx'
+      OSSRH_URL: 'xxxxx'
+      OSSRH_TOKEN: 'xxxxx'
+      GPG_SECRET: 'xxxxx'
