--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -38,18 +38,18 @@ jobs:
         include:
           - SERVICE_LOCATION: 'admin/admin-service'
             SERVICE_NAME: 'admin-service'
-            JAR_ZIP_NAME: 'admin'
+            ZIP_FILENAME: 'admin'
           - SERVICE_LOCATION: 'admin/kernel-masterdata-service'
             SERVICE_NAME: 'kernel-masterdata-service'
-            JAR_ZIP_NAME: 'admin'
+            ZIP_FILENAME: 'admin'
           - SERVICE_LOCATION: 'admin/kernel-syncdata-service'
             SERVICE_NAME: 'kernel-syncdata-service'
-            JAR_ZIP_NAME: 'admin'
+            ZIP_FILENAME: 'admin'
     uses: syedsalman3753/kattu/.github/workflows/docker-build.yml@master
     with:
       SERVICE_LOCATION: ${{ matrix.SERVICE_LOCATION }}
       SERVICE_NAME: ${{ matrix.SERVICE_NAME }}
-      JAR_ZIP: ${{ matrix.JAR_ZIP_NAME }}
+      ZIP_FILENAME: ${{ matrix.ZIP_FILENAME }}
     secrets:
       DEV_NAMESPACE_DOCKER_HUB: ${{ secrets.DEV_NAMESPACE_DOCKER_HUB }}
       ACTOR_DOCKER_HUB: ${{ secrets.ACTOR_DOCKER_HUB }}
