[MOSIP-21476]Update pom.xml
Signed-off-by: Balaji Alluru <74903654+balaji-alluru@users.noreply.github.com>

--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -51,6 +51,16 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-to-slf4j</artifactId>
+			<version>2.17.2</version>
+	        </dependency>
+                <dependency>
+	                <groupId>org.apache.logging.log4j</groupId>
+	                <artifactId>log4j-api</artifactId>
+	                <version>2.17.2</version>
+                </dependency>
+		<dependency>
 		  <groupId>org.springframework.batch.extensions</groupId>
 		  <artifactId>spring-batch-excel</artifactId>
 		  <version>0.1.0</version>
