--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -133,7 +133,7 @@
 		<dependency>
 			<groupId>io.mosip.commons</groupId>
 			<artifactId>commons-packet-manager</artifactId>
-			<version>${kernel.version}</version>
+			<version>1.2.0.1-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.cloud</groupId>
