--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -14,6 +14,9 @@ mosip.admin-userid-otp-type=USERID
 mosip.admin.uinmgmt.uin-detail-search=https://dev.mosip.io/idrepository/v1/identity/uin/{uin}
 #mosip.admin.uinmgmt.uin-detail-search=https://int.mosip.io/idrepository/v1/identity/uin/{uin}
 
+CRYPTOMANAGER_DECRYPT=https://dev.mosip.net/v1/keymanager/decrypt
+CRYPTOMANAGER_ENCRYPT=https://dev.mosip.net/v1/keymanager/encrypt
+
 
 mosip.admin.accountmgmt.auth-manager-base-uri=http://localhost:8091/v1/authmanager
 mosip.admin.accountmgmt.user-name-url=/username/
@@ -255,3 +258,50 @@ regproc.token.request.id=io.mosip.registration.processor
 regproc.token.request.version=1.0
 
 KEYBASEDTOKENAPI=https://dev.mosip.net/v1/authmanager/authenticate/clientidsecretkey
+mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
+RETRIEVE_IDENTITY_API=https://dev.mosip.net/idrepository/v1/identity/idvid
+
+#-----------------------------RID Properties---------------------------------------
+# length of the rid
+mosip.kernel.rid.length=29
+# length of the center id
+mosip.kernel.rid.centerid-length=5
+#length of the machine id
+mosip.kernel.machineid.length=5
+# length of the timestamp
+mosip.kernel.rid.timestamp-length=14
+# rid sequence length
+mosip.kernel.rid.sequence-length=5
+mosip.admin.identityMappingJson=identity-mapping.json
+mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/admin/mz/1.1.5.4/
+mosip.admin.applicant-details.exposed-identity-fields=dob,applicantPhoto
+
+## packet-manager properties
+mosip.commons.packetnames=id,evidence,optional
+# reader
+provider.packetreader.mosip=source:REGISTRATION_CLIENT,process:NEW|UPDATE|LOST|BIOMETRIC_CORRECTION,classname:io.mosip.commons.packet.impl.PacketReaderImpl
+# writer
+provider.packetwriter.mosip=source:REGISTRATION_CLIENT,process:NEW|UPDATE|LOST|BIOMETRIC_CORRECTION,classname:io.mosip.commons.packet.impl.PacketWriterImpl
+# posix adapter config
+objectstore.adapter.name=PosixAdapter
+objectstore.crypto.name=OnlinePacketCryptoServiceImpl
+default.provider.version=v1.0
+object.store.base.location=./packets
+objectstore.packet.source=REGISTRATION_CLIENT
+packet.manager.account.name=PACKET_MANAGER_ACCOUNT
+MACHINE_GET_API=https://dev.mosip.net/v1/masterdata/machines/mappedmachines/
+CRYPTOMANAGERDECRYPT_API=https://dev.mosip.net/v1/keymanager/decrypt
+CRYPTOMANAGER_DECRYPT=https://dev.mosip.net/v1/keymanager/decrypt
+CRYPTOMANAGER_ENCRYPT=https://dev.mosip.net/v1/keymanager/encrypt
+mosip.kernel.syncdata-service-get-tpm-publicKey-url=https://dev.mosip.net/v1/syncdata/tpm/publickey/
+packetmanager.packet.signature.disable-verification=true
+mosip.admin.packetupload.packetsync.url=https://dev.mosip.net/registrationprocessor/v1/registrationstatus/sync
+mosip.admin.packetupload.packetsync.name=fullName,name,firstName,middleName,lastName
+mosip.admin.packetupload.packetsync.email=email
+mosip.admin.packetupload.packetsync.phone=phone
+
+mosip.optional-languages=fra,ara
+mosip.mandatory-languages=eng
+mosip.supported-languages=eng,ara,fra
+mosip.kernel.xsdstorage-uri = LOCAL
+mosip.kernel.xsdfile = LOCAL
