--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -46,7 +46,7 @@ auth.role.prefix=ROLE_
 auth.header.name=Authorization
 
 javax.persistence.jdbc.driver=org.h2.Driver
-javax.persistence.jdbc.url=jdbc:h2\:mem\:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS  ADMIN
+javax.persistence.jdbc.url=jdbc:h2\:mem\:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS  MASTER
 javax.persistence.jdbc.username=sa
 javax.persistence.jdbc.password=sa
 hibernate.dialect=org.hibernate.dialect.H2Dialect
@@ -315,3 +315,48 @@ mosip.iam.authorization_endpoint=http://localhost:8080/keycloak/auth/realms/{rea
 mosip.iam.module.admin_realm_id=mosip
 
 mosip.iam.token_endpoint=http://localhost:8080/keycloak/auth/realms/{realmId}/protocol/openid-connect/token
+RETRIEVE_IDENTITY_API=https://dev.mosip.net/idrepository/v1/identity/idvid
+#-----------------------------RID Properties---------------------------------------
+# length of the rid
+mosip.kernel.rid.length=29
+# length of the center id
+mosip.kernel.rid.centerid-length=5
+#length of the machine id
+mosip.kernel.machineid.length=5
+# length of the timestamp
+mosip.kernel.rid.timestamp-length=14
+# rid sequence length
+mosip.kernel.rid.sequence-length=5
+mosip.admin.identityMappingJson=identity-mapping.json
+mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/admin/mz/1.1.5.4/
+mosip.admin.applicant-details.exposed-identity-fields=dob,applicantPhoto
+
+
+mosip.commons.packetnames=id,evidence,optional
+# reader
+provider.packetreader.mosip=source:REGISTRATION_CLIENT,process:NEW|UPDATE|LOST|BIOMETRIC_CORRECTION,classname:io.mosip.commons.packet.impl.PacketReaderImpl
+# writer
+provider.packetwriter.mosip=source:REGISTRATION_CLIENT,process:NEW|UPDATE|LOST|BIOMETRIC_CORRECTION,classname:io.mosip.commons.packet.impl.PacketWriterImpl
+# posix adapter config
+objectstore.adapter.name=PosixAdapter
+objectstore.crypto.name=OnlinePacketCryptoServiceImpl
+default.provider.version=v1.0
+object.store.base.location=./packets
+objectstore.packet.source=REGISTRATION_CLIENT
+packet.manager.account.name=PACKET_MANAGER_ACCOUNT
+MACHINE_GET_API=https://dev.mosip.net/v1/masterdata/machines/mappedmachines/
+CRYPTOMANAGERDECRYPT_API=https://dev.mosip.net/v1/keymanager/decrypt
+CRYPTOMANAGER_DECRYPT=https://dev.mosip.net/v1/keymanager/decrypt
+CRYPTOMANAGER_ENCRYPT=https://dev.mosip.net/v1/keymanager/encrypt
+mosip.kernel.syncdata-service-get-tpm-publicKey-url=https://dev.mosip.net/v1/syncdata/tpm/publickey/
+packetmanager.packet.signature.disable-verification=true
+mosip.admin.packetupload.packetsync.url=https://dev.mosip.net/registrationprocessor/v1/registrationstatus/sync
+mosip.admin.packetupload.packetsync.name=fullName,name,firstName,middleName,lastName
+mosip.admin.packetupload.packetsync.email=email
+mosip.admin.packetupload.packetsync.phone=phone
+
+mosip.optional-languages=fra,ara
+mosip.mandatory-languages=eng
+mosip.supported-languages=eng,ara,fra
+mosip.kernel.xsdstorage-uri = LOCAL
+mosip.kernel.xsdfile = LOCAL
