--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -343,6 +343,16 @@ mosip.role.admin.getGetbulkuploadtranscationtranscationid=GLOBAL_ADMIN
 mosip.role.admin.postauditmanagerlog=GLOBAL_ADMIN,ZONAL_ADMIN
 mosip.role.admin.getPostauditmanagerlog=GLOBAL_ADMIN,ZONAL_ADMIN
 
+#Admin LostRid controller
+mosip.role.admin.getlostRiddetailsrid=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.postlostRid=GLOBAL_ADMIN,ZONAL_ADMIN
+
+#Applicant Details controller
+mosip.role.admin.getapplicantDetailsrid=DIGITALCARD_ADMIN
+mosip.role.admin.getapplicantDetailsgetLoginDetails=DIGITALCARD_ADMIN
+mosip.role.admin.getriddigitalcardrid=DIGITALCARD_ADMIN
+
+
 # In Memory DB For Test
 javax.persistence.jdbc.driver=org.h2.Driver
 javax.persistence.jdbc.url=jdbc:h2\:mem\:testdb;DB_CLOSE_DELAY=-1;IGNORECASE=TRUE;INIT=CREATE SCHEMA IF NOT EXISTS master
@@ -463,3 +473,5 @@ mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/admin/m
 mosip.admin.applicant-details.exposed-identity-fields=dob,applicantPhoto
 DIGITAL_CARD_STATUS_URL=https://qa3.mosip.net/v1/digitalcard
 RETRIEVE_IDENTITY_API=https://dev.mosip.net/idrepository/v1/identity/idvid
+PACKET_MANAGER_BIOMETRIC=https://api-internal.dev.mosip.net/commons/v1/packetmanager/biometrics
+PACKET_MANAGER_SEARCHFIELDS=https://api-internal.dev.mosip.net/commons/v1/packetmanager/searchFields
