[MOSIP-29918] added db-test.yml
Signed-off-by: Rakshithb1 <rakshit.b@technoforte.co.in>

--- a/.github/workflows/db-test.yml
+++ b/.github/workflows/db-test.yml
@@ -5,7 +5,8 @@ on:
     types: [published]
   pull_request:
     types: [opened, reopened, synchronize]
-
+    paths:
+      - 'db_scripts/**'
   workflow_dispatch:
     inputs:
       message:
@@ -21,7 +22,8 @@ on:
       - 1.*
       - develop*
       - MOSIP*
-
+    paths:
+      - 'db_scripts/**'
 
 jobs:
   build-db-test:
