[MOSIP-29967] added dev-check.yml
Signed-off-by: Rakshitha650 <rakshitham38@gmail.com>

--- a/.github/workflows/dev-check.yml
+++ b/.github/workflows/dev-check.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   tag-branch:
-    uses: mosip/kattu/.github/workflows/dev-check.yml@master
+    uses: Rakshitha650/kattu/.github/workflows/dev-check.yml@master
     with:
       MESSAGE: ${{ inputs.MESSAGE }}
       SKIP_DEPENDENCIES: ${{ inputs.SKIP_DEPENDENCIES }}
