[MOSIP-29967] added dev-check.yml
Signed-off-by: Rakshitha650 <rakshitham38@gmail.com>

--- a/.github/workflows/dev-check.yml
+++ b/.github/workflows/dev-check.yml
@@ -17,7 +17,7 @@ on:
         default: ''
 
 jobs:
-  tag-branch:
+  dependency-check:
     uses: Rakshitha650/kattu/.github/workflows/dev-check.yml@master
     with:
       MESSAGE: ${{ inputs.MESSAGE }}
