Updated sql queries with case insensitive search
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

--- a/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
@@ -13,16 +13,17 @@ hibernate.cache.use_second_level_cache=false
 hibernate.cache.use_query_cache=false
 hibernate.cache.use_structured_entries=false
 hibernate.generate_statistics=false
+mosip.right_to_left.orientation=ara
 
-mosip.kernel.packet-status-update-url=https://dev.mosip.net/registrationprocessor/v1/registrationstatus/search
+mosip.kernel.packet-status-update-url=https://api-internal.dev.mosip.net/registrationprocessor/v1/registrationstatus/search
 
 mosip.kernel.registrationcenterid.length=5
 mosip.kernel.machineid.length=5
 
-masterdata_database_url=jdbc:postgresql://dev.mosip.net:30090/mosip_master
-masterdata_database_username=masteruser
-masterdata_database_password=mosip123
-auth.server.admin.issuer.uri=https://dev.mosip.net/keycloak/auth/realms/
+masterdata_database_url=jdbc:postgresql://api-internal.dev.mosip.net/mosip_master
+masterdata_database_username=postgres
+masterdata_database_password=mQi298ZW7p
+auth.server.admin.issuer.uri=https://iam.dev.mosip.net/auth/realms/
 mosip.primary-language=eng
 mosip.secondary-language=
 mosip.all-languages=all
@@ -30,7 +31,7 @@ auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosi
 
 mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
 
-#auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/validateToken
+#auth.server.validate.url=https://api-internal.dev.mosip.net/v1/authmanager/authorize/validateToken
 mosip.kernel.filtervalue.max_columns=200
 mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language};version:${aplication.configuration.level.version};filterValueMaxCount:{"default":${mosip.kernel.filtervalue.max_columns},"registrationcenters":50,"locations":100}
 mosip.recommended.centers.locCode =5
@@ -38,16 +39,16 @@ auth.server.admin.offline.token.validate=false
 aplication.configuration.level.version=1.1.5
 mosip.optional-languages=
 mosip.mandatory-languages=eng
-auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
-auth.server.admin.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
+auth.server.validate.url=https://api-internal.dev.mosip.net/v1/authmanager/authorize/admin/validateToken
+auth.server.admin.validate.url=https://api-internal.dev.mosip.net/v1/authmanager/authorize/admin/validateToken
 
 master.search.maximum.rows=50
 
-mosip.kernel.masterdata.audit-url=https://dev.mosip.net/v1/auditmanager/audits
+mosip.kernel.masterdata.audit-url=https://api-internal.dev.mosip.net/v1/auditmanager/audits
 
 mosip.level=2
 mosip.iam.adapter.clientid=mosip-admin-client
-mosip.iam.adapter.clientsecret=xyz123
+mosip.iam.adapter.clientsecret=xzzvvPISDPwR2yl7
 mosip.iam.adapter.appid=admin
 mosip.kernel.sign-url=https://qa.mosip.io/v1/signature/sign
 
@@ -56,12 +57,12 @@ mosip.kernel.applicant.type.age.limit = 5
 mosip.stage.environment=Staging
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
 mosip.kernel.applicantType.mvel.file=applicanttype.mvel
-mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/kernel-masterdata-service/mz/develop-v2/
+mosip.kernel.config.server.file.storage.uri=https://api-internal.dev.mosip.net/config/kernel-masterdata-service/mz/develop-v2/
 mosip.kernel.masterdata.auth-manager-base-uri=http://localhost:8080/
 
 mosip.kernel.masterdata.template_idauthentication_event=MASTERDATA_IDAUTHENTICATION_TEMPLATES
 mosip.kernel.masterdata.title_event=MASTERDATA_TITLES
-websub.publish.url=https://dev.mosip.net/websub/publish
+websub.publish.url=https://api-internal.dev.mosip.net/websub/publish
 
 mosip.kernel.masterdata.template_idauthentication_event_module_name=ID Authentication
 
@@ -395,6 +396,7 @@ mosip.role.admin.masterdata.getdocumenttypesmissingidslangcode=GLOBAL_ADMIN,ZONA
 mosip.role.admin.masterdata.getdocumentcategoriesmissingidslangcode=GLOBAL_ADMIN,ZONAL_ADMIN
 mosip.role.admin.masterdata.getdynamicfieldmissingidslangcode=GLOBAL_ADMIN,ZONAL_ADMIN
 
-zone.user.details.url=https://dev.mosip.net/v1/authmanager/userdetails
+zone.user.details.url=https://api-internal.dev.mosip.net/v1/authmanager/userdetails
 mosip.kernel.masterdata.code.validate.regex=[^a-z0-9]
 mosip.kernel.masterdata.name.validate.regex=[^A-Za-z]
+mosip.kernel.config.server.file.storage.uri=http://localhost:51000/config/resident/mz/develop/
