--- a/admin/kernel-masterdata-service/pom.xml
+++ b/admin/kernel-masterdata-service/pom.xml
@@ -9,7 +9,7 @@
 	<name>kernel-masterdata-service</name>
 	<description>Mosip commons project </description>
 	<url>https://github.com/mosip/commons</url>
-	<version>1.2.0.1-SNAPSHOT</version>
+	<version>1.2.0.1-B2</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -121,7 +121,7 @@
 		<kernel.logger.logback.version>1.2.0</kernel.logger.logback.version>
 		<tss.version>0.3.0</tss.version>
 		<kernel.websubclient.api.version>1.2.0</kernel.websubclient.api.version>
-		<kernel.version>1.2.0.1-SNAPSHOT</kernel.version>
+		<kernel.version>1.2.0.1-B2</kernel.version>
 	</properties>
 
 	<repositories>
