--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -24,7 +24,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-core</artifactId>
-			<version>${kernel.version}</version>
+			<version>1.2.0.1-B2</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.apache.logging.log4j</groupId>
@@ -216,7 +216,7 @@
 	<dependency>
 		<groupId>io.mosip.kernel</groupId>
 		<artifactId>kernel-auth-adapter</artifactId>
-		<version>${project.version}</version>
+		<version>1.2.0.1-B3</version>
 	</dependency>
 	<dependency>
 		<groupId>io.netty</groupId>
