--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -146,7 +146,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-core</artifactId>
-			<version>1.2.0.1-B2</version>
+			<version>${project.version}</version>
 		</dependency>
 			<dependency>
 			<groupId>org.springframework.boot</groupId>
