--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -42,6 +42,12 @@
 		    <version>2.15.0</version>
 		</dependency>
 		<dependency>
+		    <groupId>com.fasterxml.jackson.dataformat</groupId>
+		    <artifactId>jackson-dataformat-xml</artifactId>
+		    <version>2.12.0</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
