--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>io.mosip.admin</groupId>
 	<artifactId>admin-parent</artifactId>
-	<version>1.2.0.1-B2</version>
+	<version>1.2.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>admin</name>
@@ -233,7 +233,7 @@
 					<dependency>
 						<groupId>io.mosip.kernel</groupId>
 						<artifactId>kernel-auth-adapter</artifactId>
-						<version>1.2.0.1-B3</version>
+						<version>1.2.0.1-SNAPSHOT</version>
 					</dependency>
 				</dependencies>
 				<build>
