--- a/admin/hotlist-service/pom.xml
+++ b/admin/hotlist-service/pom.xml
@@ -33,6 +33,7 @@
 		<kernel-core.version>1.2.0.1-SNAPSHOT</kernel-core.version>
 		<kernel-websubclient-api.version>1.2.0.1-SNAPSHOT</kernel-websubclient-api.version>
 		<kernel-logger-logback.version>1.2.0.1-SNAPSHOT</kernel-logger-logback.version>
+		<kernel.version>1.2.0.1-SNAPSHOT</kernel.version>
 	</properties>
 
 	<repositories>
@@ -361,7 +362,7 @@
 				<dependency>
 					<groupId>io.mosip.kernel</groupId>
 					<artifactId>kernel-auth-adapter</artifactId>
-					<version>1.2.0.1-B3</version>
+					<version>${kernel.version}</version>
 				</dependency>
 			</dependencies>
 			<build>
