MOSIP-30026:Added the code tp throw the error for invalid biometricAvailable/gender/residenceStatus data
Signed-off-by: Yash S <119652212+yashmsonkusare@users.noreply.github.com>

--- a/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
@@ -398,3 +398,8 @@ mosip.role.admin.masterdata.getdynamicfieldmissingidslangcode=GLOBAL_ADMIN,ZONAL
 zone.user.details.url=https://dev.mosip.net/v1/authmanager/userdetails
 mosip.kernel.masterdata.code.validate.regex=[^a-z0-9]
 mosip.kernel.masterdata.name.validate.regex=[^A-Za-z]
+
+#Properties for applicant type
+mosip.kernel.masterdata.individualTypeCode=FR,NFR
+mosip.kernel.masterdata.genderCode=MLE,FLE
+mosip.kernel.masterdata.biometricAvailable=true,false
