MOSIP-20534: updated the code and value fields in a single validator
Signed-off-by: SwethaKrish4 <110164892+SwethaKrish4@users.noreply.github.com>

--- a/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
@@ -397,4 +397,5 @@ mosip.role.admin.masterdata.getdynamicfieldmissingidslangcode=GLOBAL_ADMIN,ZONAL
 
 zone.user.details.url=https://dev.mosip.net/v1/authmanager/userdetails
 mosip.kernel.masterdata.code.validate.regex=[^a-z0-9]
+mosip.kernel.masterdata.value.validate.regex=[^a-z0-9]
 mosip.kernel.masterdata.name.validate.regex=[^A-Za-z]
