--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -434,5 +434,6 @@ openapi.service.servers[0].description=Admin Masterdata url
 openapi.group.name=${openapi.info.title}
 openapi.group.paths[0]=/**
 mosip.kernel.masterdata.code.validate.regex=[^a-z0-9]
+mosip.kernel.masterdata.value.validate.regex=[^a-z0-9]
 mosip.kernel.masterdata.name.validate.regex=[^a-z]
 
