--- a/admin/hotlist-service/pom.xml
+++ b/admin/hotlist-service/pom.xml
@@ -362,7 +362,7 @@
 				<dependency>
 					<groupId>io.mosip.kernel</groupId>
 					<artifactId>kernel-auth-adapter</artifactId>
-					<version>1.2.1-SNAPSHOT</version>
+					<version>1.2.0.1</version>
 				</dependency>
 			</dependencies>
 			<build>
