--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -216,7 +216,7 @@
 	<dependency>
 		<groupId>io.mosip.kernel</groupId>
 		<artifactId>kernel-auth-adapter</artifactId>
-		<version>1.2.0.1</version>
+		<version>${kernel-auth-adapter.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>io.netty</groupId>
