--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -167,6 +167,7 @@
 		<io.jsonwebtoken.jjwt.version>0.6.0</io.jsonwebtoken.jjwt.version>
 		<apache.directory.api.version>2.0.0.AM2</apache.directory.api.version>
 		<kernel.version>1.2.0.1</kernel.version>
+		<kernel-auth-adapter.version>1.2.0.1</kernel-auth-adapter.version>
 		<sonar.coverage.exclusions>**/repositories/**,**/constant/**,**/config/**,**/httpfilter/**,**/cache/**,**/dto/**,**/entity/**,**/model/**,**/exception/**,**/repository/**,**/security/**,**/*Config.java,**/*BootApplication.java,**/*VertxApplication.java,**/cbeffutil/**,**/*Util.java,**/helper/beans/**,**/OptionalFilter.java,**/*Enum.java,**/validator.registereddevice/**,**/DeviceProvider*.java,**/DeviceRegister*.java,**/FoundationalTrustProvider*.java,**/GenderType*.java,**/IndividualType*.java,**/MOSIPDeviceService*.java,**/RegisteredDevice*.java,**/RegistrationCenterDeviceHistoryServiceImpl.java,**/RegistrationCenterMachineUserServiceHistoryImpl.java</sonar.coverage.exclusions>
 		<sonar.cpd.exclusions>**/dto/**,**/entity/**,**/config/**</sonar.cpd.exclusions>
 	</properties>
@@ -233,7 +234,7 @@
 					<dependency>
 						<groupId>io.mosip.kernel</groupId>
 						<artifactId>kernel-auth-adapter</artifactId>
-						<version>1.2.0.1</version>
+						<version>${kernel-auth-adapter.version}</version>
 					</dependency>
 				</dependencies>
 				<build>
