--- a/apitest/pom.xml
+++ b/apitest/pom.xml
@@ -27,7 +27,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>io.mosip.testrig.apirig.automationtests.commons</groupId>
-			<artifactId>automationtests-commons</artifactId>
+			<artifactId>apitest-commons</artifactId>
 			<version>1.2.1-java21-SNAPSHOT</version>
 		</dependency>
 		
