--- a/apitest/pom.xml
+++ b/apitest/pom.xml
@@ -18,8 +18,8 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:git:git://github.com/mosip/mosip-functional-tests.git</connection>
-		<developerConnection>scm:git:ssh://github.com:mosip/mosip-functional-tests.git</developerConnection>
+		<connection>scm:git:git://github.com/mosip/admin-services.git</connection>
+		<developerConnection>scm:git:ssh://github.com:mosip/admin-services.git</developerConnection>
 		<url>https://github.com/mosip/admin-services</url>
 		<tag>HEAD</tag>
 	</scm>
