[MOSIP-30425] Updated Admin-services props
Signed-off-by: VSIVAKALYAN <kalyanvellanki321@gmail.com>

--- a/admin/hotlist-service/src/main/resources/bootstrap.properties
+++ b/admin/hotlist-service/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 #spring.cloud.config.uri=localhost
 #spring.cloud.config.label=develop
-spring.cloud.config.name=hotlist
+spring.cloud.config.name=application,hotlist
 spring.application.name=hotlist
 #spring.profiles.active=mz
 spring.profiles.active=local
