--- a/admin/kernel-masterdata-service/src/main/resources/bootstrap.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/bootstrap.properties
@@ -1,7 +1,7 @@
 #spring.cloud.config.uri=http://104.211.212.28:51000
 #spring.cloud.config.label=master
 spring.profiles.active=local1
-spring.cloud.config.name=kernel
+spring.cloud.config.name=application,kernel
 spring.application.name=kernel-masterdata-service
 #management.security.enabled=false
 #management.endpoint.health.show-details=when-authorized
