MOSIP-33945 - Fixed the failure test cases
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

--- a/apitest/src/main/resources/masterdata/MachineSpecification/CreateMachineSpecification.yml
+++ b/apitest/src/main/resources/masterdata/MachineSpecification/CreateMachineSpecification.yml
@@ -25,7 +25,7 @@ CreateMachineSpecification:
    Masterdata_CreateMachineSpecification_InputParameter_Name_Missing:
       endPoint: /v1/masterdata/machinespecifications
       role: admin
-      templateFields: []
+      templateFields: ["description"]
       restMethod: post
       inputTemplate: masterdata/MachineSpecification/machineSpecification
       outputTemplate: masterdata/error
@@ -52,7 +52,7 @@ CreateMachineSpecification:
    Masterdata_CreateMachineSpecification_InputParameter_Name_Empty:
       endPoint: /v1/masterdata/machinespecifications
       role: admin
-      templateFields: []
+      templateFields: ["description"]
       restMethod: post
       inputTemplate: masterdata/MachineSpecification/machineSpecification
       outputTemplate: masterdata/error
@@ -79,7 +79,7 @@ CreateMachineSpecification:
    Masterdata_CreateMachineSpecification_InputParameter_Name_AboveMaxLen64:
       endPoint: /v1/masterdata/machinespecifications
       role: admin
-      templateFields: []
+      templateFields: ["description"]
       restMethod: post
       inputTemplate: masterdata/MachineSpecification/machineSpecification
       outputTemplate: masterdata/error
